<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.melvincheng.a2.BrowseProductsActivity">

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_lbl" />
    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_lbl"
        android:inputType="none"
        android:editable="false"/>
    <TextView
        android:id="@+id/des_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit"
        android:text="@string/des_lbl" />
    <EditText
        android:id="@+id/des_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/des_lbl"
        android:inputType="none"
        android:editable="false"/>
    <TextView
        android:id="@+id/priceCad_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/des_edit"
        android:text="@string/priceCad_lbl" />
    <EditText
        android:id="@+id/priceCad_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceCad_lbl"
        android:inputType="none"
        android:editable="false"/>
    <TextView
        android:id="@+id/priceBit_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceCad_edit"
        android:text="@string/priceBit_lbl" />
    <EditText
        android:id="@+id/priceBit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceBit_lbl"
        android:inputType="none"
        android:editable="false"/>
    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceBit_edit">
        <Button
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:onClick="prev"
            android:text="@string/prev_btn"/>
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="delete"
            android:text="@string/delete_btn"/>
        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="next"
            android:text="@string/next_btn" />
    </RelativeLayout>
</RelativeLayout>
