<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.melvincheng.a2.AddProductActivity">

    <TextView
        android:id="@+id/add_name_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_lbl"/>
    <EditText
        android:id="@+id/add_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_name_lbl"/>
    <TextView
        android:id="@+id/add_des_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_name_edit"
        android:text="@string/des_lbl"/>
    <EditText
        android:id="@+id/add_des_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_des_lbl"/>
    <TextView
        android:id="@+id/add_price_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_des_edit"
        android:text="@string/price_lbl"/>
    <EditText
        android:id="@+id/add_price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_price_lbl"
        android:inputType="numberDecimal"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/add_price_edit"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/save_btn"
            android:layout_marginEnd="32dp"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel_btn"/>
    </LinearLayout>
</RelativeLayout>
